@@ -31,6 +31,10 @@ RE_LINK_PSEUDO = re.compile("a:(link|visited|active|hover|focus)*")
 RE_CSS_COMMENT = re.compile("\/\*[^*]*\*+([^/][^*]*\*+)*\/")
 RE_CSS_BLOCK = re.compile("\{[^}]*\}")
 
+PSUEDO_SYMBOLS = completer.CreateSymbols([ u'active', u'focus', u'hover', 
+                                           u'link', u'visited' ],
+                                         )
+
 #--------------------------------------------------------------------------#
 
 class Completer(completer.BaseCompleter):
@@ -50,14 +54,14 @@ class Completer(completer.BaseCompleter):
         """Returns the list of possible completions for a
         command string. If namespace is not specified the lookup
         is based on the locals namespace
-        @param command: commadn lookup is done on
+        @param command: command lookup is done on
         @keyword namespace: namespace to do lookup in
 
         """
         buff = self.GetBuffer()
         keywords = buff.GetKeywords()
         if command in [None, u'']:
-            return keywords
+            return completer.CreateSymbols(keywords, completer.TYPE_UNKNOWN)
 
         cpos = buff.GetCurrentPos()
         cline = buff.GetCurrentLine()
@@ -66,7 +70,7 @@ class Completer(completer.BaseCompleter):
 
         # Check for the case of a pseudo class
         if IsPsuedoClass(command, tmp):
-            return [ u'active', u'focus', u'hover', u'link', u'visited' ]
+            return PSUEDO_SYMBOLS
 
         # Give some help on some common properties
         if tmp.endswith(u':'):
@@ -74,7 +78,7 @@ class Completer(completer.BaseCompleter):
             comps = PROP_OPTS.get(word, list())
             comps = list(set(comps))
             comps.sort()
-            return comps
+            return completer.CreateSymbols(comps, completer.TYPE_PROPERTY)
 
         # Look for if we are completing a tag class
         if tmp.endswith(u'.'):
@@ -89,9 +93,9 @@ class Completer(completer.BaseCompleter):
 
                 classes = list(set(classes))
                 classes.sort()
-            return classes
+            return completer.CreateSymbols(classes, completer.TYPE_CLASS)
 
-        return keywords
+        return completer.CreateSymbols(keywords, completer.TYPE_UNKNOWN)
 
     def GetCallTip(self, command):
         """Returns the formated calltip string for the command.
@@ -146,7 +150,7 @@ def GetWordLeft(line):
 
 #--------------------------------------------------------------------------#
 
-# Proprites to provide some input help on
+# Properties to provide some input help on
 PROP_OPTS = { u'border-style' : [u'none', u'hidden', u'dotted', u'dashed',
                                  u'solid', u'double', u'groove', u'ridge',
                                  u'inset', u'outset'],
