@@ -99,29 +99,30 @@ class Completer(completer.BaseCompleter):
                 # Get Auto-completion List
                 complst = cmpl.get_completions(command)
                 sigs = list()
+                type = completer.TYPE_UNKNOWN
                 for sig in complst:
                     word = sig['word'].rstrip(u'(.')
                     if sig['type'] == "function":
-                        word += u'?%d' % completer.IMG_FUNCTION
+                        type = completer.TYPE_FUNCTION
                     elif sig['type'] == "method":
-                        word += u'?%d' % completer.IMG_METHOD
+                        type = completer.TYPE_METHOD
                     elif sig['type'] == "class":
-                        word += u'?%d' % completer.IMG_CLASS
+                        type = completer.TYPE_CLASS
                     elif sig['type'] == "attribute":
-                        word += u'?%d' % completer.IMG_ATTRIBUTE
+                        type = completer.TYPE_ATTRIBUTE
                     elif sig['type'] == "property":
-                        word += u'?%d' % completer.IMG_PROPERTY
-
-                    sigs.append(word)
+                        type = completer.TYPE_PROPERTY
+                    
+                    sigs.append(completer.Symbol(word, type))
 
 #                sigs = [ sig['word'].rstrip('(.') for sig in complst ]
-                sigs.sort(lambda x, y: cmp(x.upper(), y.upper()))
+                sigs.sort(lambda x, y: cmp(x.Name.upper(), y.Name.upper()))
                 return sigs
 
         except Exception, msg:
             self._log("[pycomp][err] _GetCompletionInfo: %s, %s" % \
                       (sys.exc_info()[0], sys.exc_info()[1]))
-            return ''
+            return []
         
     def GetAutoCompList(self, command):
         """Returns the list of possible completions for a 
